--- a/improved-video-classroom/index.html
+++ b/improved-video-classroom/index.html
@@ -147,6 +147,7 @@
     <div class="project-sub-section">
         <h4>1.4. Insights and Feature Prioritisation</h4>
         <p>At the end of the Discover Phase, we had a workshop with all the key stakeholders to analyse the research data and come up with a product plan.</p>
+        <p><b>Insights</b></p>
         <ul>
             <li>Students are easily distracted; Simplify student controls; minimize distractions.</li>
             <li>Students have a lot of questions and doubts; Introduce breakout rooms for personalized guidance.</li>
@@ -154,6 +155,7 @@
             <li>Teachers utilised supplementary online tools like whiteboards and Google Images to enhance concept explanations.</li>
         </ul>
         <p>The decision on feature prioritisation was made based on user insights as well as a feasibility analysis carried out by the engineering team.</p>
+        <p><b>Features and product ideas</b></p>
         <ul>
             <li>Teacher controlled video classroom</li>
             <li>Minimal student video classroom</li>
