--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
     <div class="item-list">
         <div>
             <p>2021 - UX Design - WhiteHatJR</p>
-            <h3><a href="/improved-video-classroom/">Making STEM Education more accessible with group online classes</a></h3>
-            <p>Redesigned an existing product experience to help teachers manage additional students in an online classroom.</p>
+            <h3><a href="/improved-video-classroom/">Making education more accessible with group online classes</a></h3>
+            <p>Realigned an existing product experience to help the company enter a new market.</p>
         </div>
         <div>
-            <p>2017 - UX Design and Product - GOQii</p>
-            <h3><a href="/designing-live-health-and-fitness-classes/">Designing Live Online Health Class on mobile</a></h3>
-            <p>Designed and launched a Live Onlione Health and Fitness platform on the GOQii mobile app and grew it to over 500K users in 6 months.</p>
+            <p>2019 - UX Design and Product - GOQii</p>
+            <h3><a href="/designing-live-health-and-fitness-classes/">Crafting an Interactive Video Health Experience</a></h3>
+            <p>Crafted a live health video experience that improved time spent on app by 35% in 6 months.</p>
         </div>
-        <div>
+        <!-- <div>
             <p>2015 - User Research - Practo</p>
             <h3><a href="/understanding-the-patient-journey/">Understanding Patient behavior when choosing a hospital</a></h3>
             <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
 <section id="essay" class="listing-section">
