--- a/designing-live-health-and-fitness-classes/index.html
+++ b/designing-live-health-and-fitness-classes/index.html
@@ -34,7 +34,7 @@
 <section class="project-hero">
     <div class="content">
         <p>2019 - UX Design and Product Management - GOQii</p>
-        <h3>Designing Live Online Health Class on mobile</h3>
+        <h3>Crafting an Interactive Video Health Experience</h3>
     </div>
 </section>
 <section class="project-content-section">
