--- a/improved-video-classroom/index.html
+++ b/improved-video-classroom/index.html
@@ -34,7 +34,7 @@
 <section class="project-hero">
     <div class="content">
         <p>2021 - UX Design - WhiteHatJR</p>
-        <h3>Making STEM Education more accessible with group online classes</h3>
+        <h3>Making education more accessible with group online classes</h3>
     </div>
 </section>
 <section class="project-content-section">
