--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
         <p>Documentation of personal projects as well as occasional writings about product design.</p>
     </div>
     <div class="item-list">
-        <div>
+        <!-- <div>
             <p>2021 - Product Design</p>
             <h3><a href="/improved-video-classroom/">Online reviews have one major problem</a></h3>
             <p>I recently went on a trip. I decided to book a hostel from Booking...</p>
-        </div>
-        <div>
+        </div> -->
+        <!-- <div>
             <p>2017 - Design Management</p>
             <h3><a href="/designing-live-health-and-fitness-classes/">Just build a “like” feature</a></h3>
             <p>Are you tired of stakeholders underestimating the requirements...</p>
-        </div>
+        </div> -->
         <div>
             <p>Jan 2022 - Art Project</p>
             <h3><a href="/art/explorations-in-code-and-audio">Experiments in Audio & Code</a></h3>
