--- a/404.html
+++ b/404.html
@@ -1,1 +1,54 @@
-<h1>Page not found</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js" integrity="sha512-5T245ZTH0m0RfONiFm2NF0zcYcmAuNzcGyPSQ18j8Bs5Pbfhp5HP1hosrR8XRt5M3kSRqzjNMYpm2+it/AUX/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <title>Page not found</title>
+</head>
+<body>
+    <header>
+        <h1><a href="/">Karan Mhatre</a></h1>
+        <nav>
+            <ul>
+                <li><a href="/" class="">Home</a></li>
+                <li><a href="/art">Art</a></li>
+                <li><a href="/about" class="">About</a></li>
+                <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
+            </ul>
+        </nav>
+    </header>
+    <main id="pageContent">
+        <section class="main-container">
+    <div class="image-container-small">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_2000/q_auto/404_e2al01.jpg" alt=""><br>
+        <p>It seems that you have reached a page that does not exist. You can help by sharing the broken link with <b>me@karanmhatre.com</b> and I'll be sure to fix it.</p>
+    </div>
+    </section>
+    </main>
+    <footer>
+        <div class="social">
+            <ul>
+                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt=""></a></li>
+                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
+            </ul>
+        </div>
+        <p id="credit">
+            I built this website using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
+        </p>
+    </footer>
+</body>
+</html>
