--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -22,9 +22,9 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/" class="">Home / Case Studies</a></li>
-                <li><a href="/about" class="">About Me</a></li>
-                <!-- <li><a href="/illustrations">Illustrations</a></li> -->
+                <li><a href="/" class="">Home</a></li>
+                <li><a href="/art">Art</a></li>
+                <li><a href="/about" class="">About</a></li>
                 <!-- <li><a href="/creative-coding"  class="active">Creative Coding</a></li> -->
             </ul>
         </nav>
