--- a/designing-live-health-and-fitness-classes/index.html
+++ b/designing-live-health-and-fitness-classes/index.html
@@ -22,9 +22,9 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/" class="">Home / Case Studies</a></li>
-                <li><a href="/about" class="">About Me</a></li>
-                <!-- <li><a href="/illustrations">Illustrations</a></li> -->
+                <li><a href="/" class="">Home</a></li>
+                <li><a href="/art">Art</a></li>
+                <li><a href="/about" class="">About</a></li>
                 <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
@@ -37,14 +37,14 @@
         <h3>Crafting an Interactive Video Health Experience</h3>
     </div>
 </section>
-<section class="project-content-section">
-    <div class="project-metadata project-sub-section">
+<section class="main-container">
+    <div class="project-metadata sub-section">
         <div class="item">
             <span class="label">
                 Company
             </span>
             <p class="data">
-                GOQii - GOQii is an Indian fitness technology company, headquartered in California that offers a wearable fitness band with a mobile-app, and personalised remote health coaching.
+                <a href="https://goqii.com/" target="_blank">GOQii</a> is an Indian fitness technology company, headquartered in California that offers a wearable fitness band with a mobile-app, and personalised remote health coaching.
             </span>
         </div>
         <div class="item">
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>My Role and the Design Process</h3>
         <p>We needed to understand the Health and Fitness related video industry in India. Then, we needed to find our product niche, and craft an iterative plan for launch.</p>
         <p><b>1. Discovery Phase (Strategic)</b></p>
@@ -119,18 +119,18 @@
         </ul>
         <p><b>2. Design Phase (Tactical)</b></p>
         <ul>
-            <li>2.1. User Flow</li>
-            <li>2.3. Wire framing, Prototyping, and User Testing</li>
-            <li>2.4. Interface design</li>
-            <li>2.5. Go to Market Strategy</li>
+            <li>2.1. MVP</li>
+            <li>2.2. GOQii Play v2.0.</li>
+            <li>2.3. GOQii Play v3.0.</li>
+            <li>2.4. GOQii Play v4.0.</li>
         </ul>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>1. Discovery Phase</h3>
         <p>We started by interviewing existing GOQii users.</p>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.1. User Interviews</h4>
         <p>We conducted 10 user interviews to understand user behaviour and current trends. The insights from these interviews helped us craft a more objective survey that we sent to 500 GOQii users as well as 1000 non-GOQii users. Below are some of the questions discussed in these interviews and surveys.</p>
         <ul>
@@ -142,7 +142,7 @@
         </ul>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.2. Competitor Analysis</h4>
         <p>I studied the current live streaming platforms in the market. These had a lot to offer in terms of what designs users were already familiar with. I looked at YouTube Live, Facebook Live, and Instagram Live.</p>
         <p><b>Drawbacks of current online exercise videos</b></p>
@@ -159,13 +159,13 @@
         </ul>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.3. Trial Videos</h4>
         <p>To test the concept further, we started to conduct Live Classes on Facebook Live and YouTube Live. We marketed it in the GOQii app and monitored click rates. We tested with multiple banners and messages. We saw promising results. This helped us build more faith in our direction, and understood the type of content that worked well before investing in getting more coaches on board.</p>
         <p>We also hoped to get some early learnings from this experiment. This allowed us to get real learnings as soon as possible.</p>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.4. Insights and Feature Prioritisation</h4>
         <p>At the end of the Discover Phase, we had a workshop with all the key stakeholders to analyse the research data and come up with a product plan.</p>
         <p><b>Insights</b></p>
@@ -191,12 +191,12 @@
         <p>We also shared our suggestions and recommendations for the curriculum design team (who were in charge of designing the activities and training material for the group classes).</p>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>2. Design Phase</h3>
         <p>It was time to get tactical and put pen on paper (metaphorically, of-course).</p>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>2.1. MVP</h3>
         <p>We kept it basic. Enough to test our concept and get some additional engagement on the platform.</p>
         <p>We trained some of the in-house coaches to take video classes. We had them stream from a third party RTMP supporting app, and read user comments on a temporary web page we had created for each class.</p>
@@ -218,7 +218,7 @@
         </ul>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>2.2. GOQii Play v.2.0.</h3>
         <p>After bug fixing and some minor releases it was time to build version 2 of the product. We narrowed down the scope to the following items,</p>
         <ul>
@@ -232,7 +232,7 @@
         <p>We saw a steady increase in the GOQii Play DAU, improvement in the adoption rate (with the help of notifications, emailers, and YouTube promotions, and we started tracking our retention rate on the feature.)</p>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>2.3. GOQii Play v.3.0.</h3>
         <p>The focus of version 3 was to improve the discovery and browsing experience of the users. We finalised on the below feature set for the next release,</p>
         <ul>
@@ -260,7 +260,7 @@
         <p>All these parameters helped us curate better content over time.</p>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>2.4. GOQii Play v.4.0.</h3>
         <p>The feature had lead to increased time spent on the platform. Users that watched videos on average made more purchases on the platform and showed better renewal rates. 6 months after launching GOQii play, it was now time to monetise the feature.
         <ul>
@@ -273,7 +273,7 @@
         <p>The new subscription plans required some pricing adjustments until we saw uptick in sales.</p>
     </div>
 
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>Highlights, overall impact, and future scope</h3>
         <p>We invited prominent Indian elebrities to conduct shows on the platform such as India's men's hockey team ex-captain Sardar Singh, and Bollywood superstar Akshay Kumar.</p>
         <p>Over 6 months we,</p>
