--- a/improved-video-classroom/index.html
+++ b/improved-video-classroom/index.html
@@ -22,9 +22,9 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/" class="">Home / Case Studies</a></li>
-                <li><a href="/about" class="">About Me</a></li>
-                <!-- <li><a href="/illustrations">Illustrations</a></li> -->
+                <li><a href="/" class="">Home</a></li>
+                <li><a href="/art">Art</a></li>
+                <li><a href="/about" class="">About</a></li>
                 <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
@@ -37,14 +37,14 @@
         <h3>Making education more accessible with group online classes</h3>
     </div>
 </section>
-<section class="project-content-section">
-    <div class="project-metadata project-sub-section">
+<section class="main-container">
+    <div class="project-metadata sub-section">
         <div class="item">
             <span class="label">
                 Company
             </span>
             <p class="data">
-                WhiteHatJR (Now called <i>Byjus Future School</i>) - Provides online tutoring for school children (ages 6-14).
+                WhiteHatJR (Now called <a href="https://www.byjusfutureschool.com/" target="_blank">Byjus Future School</a>) - Provides online education for school children (ages 6-14).
             </span>
         </div>
         <div class="item">
@@ -65,10 +65,11 @@
         </div>
         <div class="item">
             <span class="label">
-                Goal
+                The Project
             </span>
             <p class="data">
-                In an ambitious move to democratize education, WhiteHatJR (now known as Bjyus Future School) embarked on a transformative journey. Their mission was to offer online tutoring that's not only impactful but also affordable.
+                In an ambitious move to democratize education, WhiteHatJR (now known as Bjyus Future School) embarked on a transformative journey. Their mission was to offer online tutoring that's not only impactful but also affordable. <br><br>
+                We wanted to adapt our existing one-to-one teaching model to allow for four students at a time.
             </p>
         </div>
         <div class="item">
@@ -76,7 +77,7 @@
                 Project
             </span>
             <p class="data">
-                To adapt our existing one-to-one teaching model and introduce a one-to-four classroom experience, promoting access to quality education across India.
+                
             </p>
         </div>
         <div class="item">
@@ -95,6 +96,14 @@
                 A 2 member team consisting of a Product Manager and me as the designer.
             </p>
         </div>
+        <div class="item">
+            <span class="label">
+                Result
+            </span>
+            <p class="data">
+                Improved teacher NPS, increased sign-ups, and allowed the company to enter a new market quickly.
+            </p>
+        </div>
         <!-- <li class="item">
             <span class="label">
                 My role
@@ -104,34 +113,34 @@
             </span>
         </li> -->
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>My Role and the Design Process</h3>
         <p>We decided that this project required research and understanding into the current behavioural patterns of the users - the teachers, and the students, because the project required a broad understanding of the process and this was a critical business function.</p>
         <p><b>1. Discovery Phase (Strategic)</b></p>
         <ul>
             <li>1.1. User interviews</a></li>
-            <li>1.2. Contextual Inquiry</li>
+            <li>1.2. Contextual inquiry</li>
             <li>1.3. Trial classes</li>
-            <li>1.4. Insights and feature prioritisation</li>
+            <li>1.4. Competitive analysis</li>
+            <li>1.5. Insights and feature prioritisation</li>
         </ul>
         <p><b>2. Design Phase (Tactical)</b></p>
         <ul>
-            <li>2.1. Competitive analysis</li>
-            <li>2.2. User Flow</li>
-            <li>2.3. Wire framing, Prototyping, and User Testing</li>
-            <li>2.4. Interface design</li>
-            <li>2.5. Collaboration with developers</li>
+            <li>2.1. User flow diagram</li>
+            <li>2.2. Wire framing, Prototyping, and User Testing</li>
+            <li>2.3. Interface design</li>
+            <li>2.4. Delivery</li>
         </ul>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>1. Discovery Phase</h3>
         <p>We planned a two week discovery phase - during which we gained insights that would help drive design and product decisions. We first created a list of objectives, that questions that we needed answered.</p>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.1. User Interviews</h4>
         <p>We conducted interviews with 5 students and 5 teachers. The goal was to understand what worked and didn't work with respect to the current classroom experiece. We also inquired into how their experience has been with group classroom settings (in tution classes, or school).</p>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.2. Contextual Inquiry</h4>
         <p>Contextual inquiry helped me derive insights into a teachers' work through observation. This revealed insights about their process that hd not come across in the interviews.</p>
         <p>I contacted 3 teachers and asked for permission to sit in the classroom during their online class. During this time, the teacher shared their screen with me. I was able to clearly see not only how they used our product, but also what additional/external resources they used.</p>
@@ -139,13 +148,18 @@
 
         <p><i><b>My Design Class with students:</b> Since our students build apps, the teaching team reached out to me and asked if I could conduct a product design session to help the kids understand basic design principles. This helped me tremendously in understanding the pain points of managing an online classroom of kids.</i></p>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h4>1.3. Trial Classes</h4>
         <p>We reached out and shortlisted 4 students to attend a trial class with a teacher on Google Meet. I, along with the product manager shadowed the teacher in these classes.</p>
         <p>This allowed us to recreate a close-to-real scenario to the product we were building and gave us an opportunity to see how our class curriculum worked in a group setting.</p>
     </div>
-    <div class="project-sub-section">
-        <h4>1.4. Insights and Feature Prioritisation</h4>
+    <div class="sub-section">
+        <h4>1.4. Competitive analysis</h4>
+        <blockquote>Good Designers Redesign, Great Designers Realign - <a href="https://alistapart.com/article/redesignrealign/" target="_blank">A List Apart</a></blockquote>
+        <p>I started by reviewing the two most popular platforms for video conferencing - Google Meet, and Zoom. Since teachers and students were familiar with these two platforms (due to virtual schooling during COVID), we wanted to use this familiarity to make our interface as simple as possible.</p>
+    </div>
+    <div class="sub-section">
+        <h4>1.5. Insights and Feature Prioritisation</h4>
         <p>At the end of the Discover Phase, we had a workshop with all the key stakeholders to analyse the research data and come up with a product plan.</p>
         <p><b>Insights</b></p>
         <ul>
@@ -169,23 +183,17 @@
         </ul>
         <p>We also shared our suggestions and recommendations for the curriculum design team (who were in charge of designing the activities and training material for the group classes).</p>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
         <h3>2. Design Phase</h3>
         <p>It was time to get tactical and put pen on paper (metaphorically, of-course).</p>
     </div>
-    <div class="project-sub-section">
-        <h4>2.1. Competitive analysis</h4>
-        <blockquote>Good Designers Redesign, Great Designers Realign</blockquote>
-        <p>Source: <a href="https://alistapart.com/article/redesignrealign/" target="_blank">A List Apart</a></p>
-        <p>I started by reviewing the two most popular platforms for video conferencing - Google Meet, and Zoom. Since teachers and students were familiar with these two platforms (due to virtual schooling during COVID), we wanted to use this familiarity to make our interface as simple as possible.</p>
-    </div>
-    <div class="project-sub-section">
-        <h4>2.2. User Flow design</h4>
+    <div class="sub-section">
+        <h4>2.1. User Flow design</h4>
         <p>I build the user flow diagrams for the new features we were looking to introduce. The purpose of this diagram was to help align the engineering team and other stakeholders on the specifics of the experience.</p>
         <p>We were to work upon the existing class flow, meaning no changes in the curriculum or teacher training were to be made.</p>
     </div>
-    <div class="project-sub-section">
-        <h4>2.3. Wire framing and prototyping</h4>
+    <div class="sub-section">
+        <h4>2.2. Wire framing and prototyping</h4>
         <p>Once the user flow was approved by the curriculum team, I created the wireframes and prototypes in Figma. At this stage, I tried a variety of different layouts and interaction methods.</p>
         <p>I locked down on a framework that helped make the product match the user's mental model, as well as allowed for future features to be accommodated.</p>
         <p>I relied on the established mental model of physical classrooms that teachers and students had been used to.</p>
@@ -196,7 +204,15 @@
             <li>Allow three modes of operation in the teacher side app - Camera view, slides view, activity view.</li>
         </ul>
     </div>
-    <div class="project-sub-section">
+    <div class="sub-section">
+        <h4>2.3. Interface design</h4>
+        <p>I designed the platform using our existing design system.</p>
+    </div>
+    <div class="sub-section">
+        <h4>2.4. Handoff and delivery</h4>
+        <p>I met with the engineering team to explain the interactions and quick doubts. I prepared the files with specs in Figma. I did regular QAs with the team to ensure that there weren't any last minute surprises.</p>
+    </div>
+    <div class="sub-section">
         <h3>Impact and Future Scope</h3>
         <ul>
             <li>Over 10k+ students use this classroom daily.</li>
@@ -205,6 +221,15 @@
             <li>We received an NPS of 60 from teachers on this release.</li>
         </ul>
         <p>Over the next few months, we closely tracked key usage metrics, like breakout room usage, and ran follow-up surveys to help assist in the evolution of the product.</p>
+    </div>
+
+    <div class="sub-section">
+        <h3>Learnings and Reflections</h3>
+        <ul>
+            <li>The company saw the value in data driven decision making and gave me room for research. This allowed the whole team to feel more confident about what we were building. I learned how to take initiative and organise successful research sessions.</li>
+            <li>This was one of the first project I did where I worked on a children's product. It was interesting to talk to kids and learn about their behaviours when it comes to apps and digital products. I had underestimated how well kids can understand interfaces.</li>
+            <li>In retrospect, I would have collaborated even more with the curriculum team (The team in charge of how the class is to be run and what activities need to be performed). This would given me a better idea of the class experience - and I could've used this learning in the designs.</li>
+        </ul>
     </div>
 
 </section>
