--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/" class="active">Home / Case Studies</a></li>
-                <li><a href="/about" class="">About Me</a></li>
-                <!-- <li><a href="/illustrations">Illustrations</a></li> -->
+                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/art">Art</a></li>
+                <li><a href="/about" class="">About</a></li>
                 <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
@@ -37,7 +37,7 @@
         <span>(2020) Power - 100x100 Acrylic on Canvas</span>
     </div>    
     <div class="content">
-        <h2>Hello 👋 I'm a Berlin-based product designer</h2>
+        <h2>Hello 👋 I'm a digital product designer based in Berlin 🇩🇪</h2>
         <p>I've been working with digital products for over 10 years, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
         <a href="/about" class="button">More about me</a>
     </div>
@@ -99,7 +99,7 @@
         </div>
     </div>
 </section>
-<div class="dark-mode">
+<!-- <div class="dark-mode">
     <section id="experiments" class="listing-section">
         <div class="listing-header">
             <h2>Digital Playground</h2>
@@ -155,7 +155,7 @@
             </ul>
         </div> 
     </section>
-</div>
+</div> -->
     </main>
     <footer>
         <div class="social">
