--- a/about/index.html
+++ b/about/index.html
@@ -22,16 +22,16 @@
         <h1><a href="/">Karan Mhatre</a></h1>
         <nav>
             <ul>
-                <li><a href="/" class="">Home / Case Studies</a></li>
-                <li><a href="/about" class="active">About Me</a></li>
-                <!-- <li><a href="/illustrations">Illustrations</a></li> -->
+                <li><a href="/" class="">Home</a></li>
+                <li><a href="/art">Art</a></li>
+                <li><a href="/about" class="active">About</a></li>
                 <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
     </header>
     <main id="pageContent">
         
-<script>
+<!-- <script>
     document.addEventListener("DOMContentLoaded", function(event) {
 
         // module aliases
@@ -259,33 +259,47 @@
         // run the engine
         Runner.run(runner, engine);
     });
-</script>
-<section class="content-section">
-    <div id="outerBox">
-        <div id="box"></div>
+</script> -->
+<section class="main-container">
+    <div class="image-container-small ">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/pic_qrr2ye.jpg" alt="" srcset="" class="only-mobile">
     </div>
-    <h2>About me</h2>
-    <p>I'm a designer, coder, and painter from India. Through my career I have worn many hats - a front-end developer, a product manager, and <b>now a product designer</b>. My versatility in skill-sets gives me a great perspective when it comes to product thinking and problem solving.</p>
-    <p>In December 2021, I moved to Berlin. </p>
-    <p>I did my <b>graduation in Computer Engineering</b>, and over time moved to crafting digital user experiences.</p>
-    <p>I also create <a href="/creative-coding">generative art using p5JS</a>, and <a href="https://instagram.com/onesquarekaran" target="_blank">paint postcards</a> from places that I travel to.</p>
-
-    <h2>Career Summary</h2>
-    <ul class="bulleted-list">
-        <li>(2015-2017)<b> Product Manager at <a href="https://www.practo.com/" target="_blank">Practo</a></b> Here I built a product to help patients to find the right hospital for their treatments (<a href="/understanding-the-patient-journey/" target="_blank">Read more</a>). I also helped scale up the Practo Tab product - a tablet device that helps doctors register patients and manage billing.</li>
-        <li>(2017-2020)<b> Senior Product Manager</b> at <a href="https://goqii.com" target="_blank">GOQii</a> Here I <a href="/designing-live-health-and-fitness-classes/" target="_blank">designed and launched GOQii Play</a> - A platform for live online health and fitness classes and scaled it up to over 50K daily active users.</li>
-        <li>(2020-2022)<b> Lead UX Designer</b> at <a href="https://www.byjusfutureschool.com/" target="_blank">Byju Future School</a> from 2020-2022. Here I designed a digital in-class and post class experience for 6-14 year old students to learn how to code.</li>
-        <li>(2022-Present) <b>Lead Product Designer</b> at <a href="https://lilt.com" target="_blank"> Lilt Inc</a> since April 2021. I work closely with translators and craft A.I. driven product features to help make them more efficient.</li>
-    </ul>
-    <h2>Other interesting things</h2>
-    <ul class="bulleted-list">
-        <li>(2015) taught Maths and English to 6th Grade students with the Akaksha Foundation in Mumbai.</li>
-        <li>(2017) exhibited my artwork (zines)  with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
-        <li>(2019) exhibited my artwork (zines) with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
-        <li>(2018) I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
-        <li>(2020) Mentored design students on <a href="https://mentorcruise.com/" target="_blank">MentorCruise.</a></li>
-        <li>(2021) Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
-    </ul>
+    
+    <div class="image-container-small">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_2000/q_auto/Frame_48095782_fe2zvo.jpg" alt="" srcset="" class="only-desktop">
+    </div>
+    <div class="sub-section">
+        <h3>About me</h3>
+        <p>I'm a digital product designer from India. Through my career I have worn many hats - a front-end developer, a product manager, and now a product designer. My versatility in skill-sets gives me a great perspective when it comes to product thinking and problem solving.</p>
+        <p>I did my graduation in Computer Engineering, and over time moved to designing digital user experiences.</p>
+        <p>I also love to paint. And recently I've started bouldering.</p>
+    </div>
+    <div class="sub-section">
+        <h3>Career Summary</h3>
+        <p>(2015-2017) Product Manager at <a href="https://www.practo.com/" target="_blank">Practo</a><br>
+            Here I built a product to help patients to find the right hospital for their treatments (<a href="/understanding-the-patient-journey/" target="_blank">Read more</a>). I also helped scale up the Practo Tab product - a tablet device that helps doctors register patients and manage billing.
+        </p>
+        <p>(2017-2020) Senior Product Manager at <a href="https://goqii.com" target="_blank">GOQii</a> <br>
+            Here I <a href="/designing-live-health-and-fitness-classes/" target="_blank">designed and launched GOQii Play</a> - A platform for live online health and fitness classes and scaled it up to over 50K daily active users.
+        </p>
+        <p>(2020-2022) Lead UX Designer at <a href="https://www.byjusfutureschool.com/" target="_blank">Byju Future School</a><br>
+            Here I designed a digital in-class and post class experience for 6-14 year old students to learn how to code
+        </p>
+        <p>(2022-Present) Lead Product Designer at <a href="https://lilt.com" target="_blank"> Lilt Inc</a><br>
+            I work closely with translators and craft A.I. driven product features to help make them more efficient.
+        </p>
+    </div>
+    <div class="sub-section">
+        <h3>Other interesting things</h3>
+        <ul class="bulleted-list">
+            <li>(2012) taught Maths and English to 6th Grade students with the <a href="https://www.akanksha.org/" target="_blank">Akaksha Foundation</a> in Mumbai.</li>
+            <li>(2017) exhibited my artwork (zines)  with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
+            <li>(2019) exhibited my artwork (zines) with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
+            <li>(2018) I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
+            <li>(2020) Mentored design students on <a href="https://mentorcruise.com/" target="_blank">MentorCruise.</a></li>
+            <li>(2021) Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
+        </ul>
+    </div>
 </section>
     </main>
     <footer>
